--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "royalscript-forked",
-  "version": "1.3.0",
-  "description": "Original description: A functional programming language with mutable data thats Royal! This project has been forked on November 7, 2021 in order to add several features I found desirable, such as the 'require' and 'export' functions, as well as fixing various bugs.",
+  "version": "1.4.0",
+  "description": "Original description: A functional programming language with mutable data thats Royal! This project has been forked on November 7, 2021 in order to add several features I found desirable, as well as fixing various bugs.",
   "main": "src/compiler.js",
   "scripts": {
     "test": "jest"
